yaml-examples/ubooquity/ubooquity-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ubooquity
  namespace: default
  labels:
    app: ubooquity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubooquity
  template:
    metadata:
      labels:
        app: ubooquity
    spec:
      containers:
      - name: ubooquity
        image: linuxserver/ubooquity
        imagePullPolicy: Always
        ports:
          - containerPort: 2202
          - containerPort: 2203
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /books
            name: books
          - mountPath: /comics
            name: comics
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: ubooquity
      - name: books
        hostPath:
          path: /mnt/share/eBooks
      - name: comics
        hostPath:
          path: /mnt/share/Comics
